--- a/api/package.json
+++ b/api/package.json
@@ -17,12 +17,15 @@
 		"@types/koa-logger": "^3.1.1",
 		"@types/koa-router": "^7.4.0",
 		"@types/node": "^13.5.0",
+		"@types/pg": "^7.14.1",
+		"dotenv": "^8.2.0",
 		"koa": "^2.11.0",
 		"koa-bodyparser": "^4.2.1",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-router": "^8.0.6",
 		"nodemon": "^2.0.2",
+		"pg": "^7.17.1",
 		"ts-node": "^8.6.2",
 		"typescript": "^3.7.5"
 	}
