--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon --watch *.ts --exec ts-node src/index.ts",
+		"reset-db": "ts-node src/db/reset-db.ts",
 		"tsc": "tsc"
 	},
 	"author": "Lukas Short",
@@ -13,6 +14,7 @@
 	"dependencies": {
 		"@types/koa": "^2.11.0",
 		"@types/koa-bodyparser": "^4.3.0",
+		"@types/koa-bouncer": "^6.0.2",
 		"@types/koa-json": "^2.0.18",
 		"@types/koa-logger": "^3.1.1",
 		"@types/koa-router": "^7.4.0",
@@ -21,6 +23,7 @@
 		"dotenv": "^8.2.0",
 		"koa": "^2.11.0",
 		"koa-bodyparser": "^4.2.1",
+		"koa-bouncer": "^6.0.4",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-router": "^8.0.6",
